<resources>
    <string name="fuel_prompt">Fuel set to zero. Are you sure?</string>
    <string name="mileage_prompt">Mileage set to zero. Are you sure?</string>
    <string name="fuel_mileage_prompt">Mileage and fuel are both set to zero. Are you sure?</string>
    <string name="fuel_mileage_warning">Mileage/Fuel must be a number and can not be empty.</string>
    <string name="mileage_higher">Mileage must be higher than the last entered.</string>
    <string name="app_name">Fuel Log</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_list_and_settings">ListAndSettings</string>
    <string name="title_activity_main_h">MainHActivity</string>
    <string name="Stanje">Fuel status for the following day</string>
    <string name="StanjePreth">Fuel status for the chosen period</string>
    <string name="Predjeno">Mileage covered from the start</string>
    <string name="PredjenoPreth">Mileage covered for the chosen period</string>
    <string name="Utrosak">Fuel expenses from the start</string>
    <string name="UtrosakPreth">Fuel expenses for the chosen period</string>
    <string name="Prikaz">Show</string>
    <string name="IzlistajText">Listing of the previous period</string>
    <string name="ProsecnaPotrosnja">Prosecna potrosnja od pocetka racunanja:</string>
    <string name="ProsecnaPotrosnjaCustom">Prosecna potrosnja za izabrani period</string>
    <string name="EnterInfo">Please enter the following information</string>
    <string name="Editor">Entered data editor</string>
    <string name="mileage_fuel_confirmation">Confirm mileage/fuel</string>
    <string name="editor">Editor</string>
    <string name="canc">Cancel</string>
    <string name="warn">Warning</string>
    <string name="err">Error</string>
    <string name="succ">Success</string>
    <string name="ok">Ok</string>
    <string name="no">No</string>
    <string-array name="perLiter_or_Total">
        <item>Per liter</item>
        <item>Total</item>
    </string-array>
    <string-array name="previousLookup">
        <item>7 Days</item>
        <item>1 Month</item>
        <item>2 Months</item>
        <item>6 Months</item>
        <item>12 Months</item>
    </string-array>
    <string name="report1">Report</string>
    <string name="report2">Report for </string>
    <string name="report3">For the period of </string>
    <string name="report4">, the range of: </string>
    <string name="report5"> was covered.</string>
    <string name="report6">Average consumption was: </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
