<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="me.infiniteimmagionation.fuellog.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/Stanje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stanjeDanText"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stanjeDanText2"
            android:gravity="center"/>

        <TextView
            android:text="@string/Predjeno"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/stanjePredjenoText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/stanjePredjenoText2" />

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/stanjePotrosenoText"
            android:text="@string/Utrosak" />

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/stanjePotrosenoText2" />

        <TextView
            android:text="@string/ProsecnaPotrosnja"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/averageText" />

        <TextView
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/averageText2" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="30dp">
        </View>

        <TextView
            android:text="@string/IzlistajText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:gravity="center"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/previousLookup"
            android:entries="@array/previousLookup"
            android:layout_gravity="center"/>

        <Button
            android:text="@string/Prikaz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/prikazButton"
            android:layout_gravity="center"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_menu_add"
        />

</android.support.design.widget.CoordinatorLayout>
