<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_last_n"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.infiniteimmagionation.fuellog.LastNActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/list"
            android:id="@+id/imageView4"
            android:layout_weight="0.29" />

        <TextView
            android:text="@string/PredjenoPreth"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/stanjePredjenoTextIP"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/stanjePredjenoText2IP"
            android:textColor="@color/colorAccentLight"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/stanjePotrosenoTextIP"
            android:text="@string/UtrosakPreth"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:id="@+id/stanjePotrosenoText2IP"
            android:textColor="@color/colorAccentLight"
            android:textSize="18sp" />

        <TextView
            android:text="@string/ProsecnaPotrosnjaCustom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/customAvgText1"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/customAvgText2"
            android:textColor="@color/colorAccentLight"
            android:textSize="18sp" />

    </LinearLayout>
</RelativeLayout>
